fix caption, fix menu overlapping content when invisible

--- a/wp-content/themes/harding/dev/styles/components/body.scss
+++ b/wp-content/themes/harding/dev/styles/components/body.scss
@@ -74,10 +74,10 @@
 		figure {
 			margin: 0 0 10px;
 			width: 100%;
-			max-height: 650px;
-			overflow: hidden;
 			img {
 				width: 100%;
+				max-height: 650px;
+				overflow: hidden;
 			}
 			figcaption {
 				display: inline-block;
@@ -89,6 +89,8 @@
 				}
 			}
 			footer {
+			    position: relative;
+			    top: 1px;
 				display: inline;
 				vertical-align: middle;
 				margin-left: 7px;
