--- a/wp-content/themes/harding/dev/styles/components/header.scss
+++ b/wp-content/themes/harding/dev/styles/components/header.scss
@@ -52,6 +52,7 @@
 	&__menu {
 		//@at-root .single #{&} {
 			position: fixed;
+			height: 0px;
 
 			ul {
 				position: relative;
